Fix line break on iOS

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -80,7 +80,7 @@ ul {
       margin-top: 3px;
       margin-bottom: 0;
       overflow-wrap: break-word;
-      width: calc(100% - 50px);
+      width: calc(100% - 51px);
     }
 
     .item-edit {
